webinterface: changed flash message to fixed width so it won't jump on different length content

--- a/webinterface/static/css/main.css
+++ b/webinterface/static/css/main.css
@@ -70,7 +70,7 @@ footer {
 	border-radius: 10px;
 	
 	display: block;
-	max-width: 500px;
+	width: 300px;
 	padding: 10px 10px 10px 30px;
 	margin: 10px;
 	
